<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cuadro_Nivel">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Digital_Print"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Cuadro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:text="Cuadro:" />

    <TextView
        android:id="@+id/NivelEstrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/NivelEstrato"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Nivel Estrato:" />

    <TextView
        android:id="@+id/UUEE"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/UUEE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/NivelEstrato"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/NivelEstrato"
        app:layout_constraintTop_toBottomOf="@+id/NivelEstrato"
        tools:text="UU.EE.:" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="71dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/digital_print" />

    <Spinner
        android:id="@+id/spinnerCuadroNumber"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCuadroLetra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/spinnerCuadroLetra"
        app:layout_constraintTop_toTopOf="@+id/spinnerCuadroLetra"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerCuadroLetra"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinnerNivelEstrato"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCuadroNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/NivelEstrato"
        app:layout_constraintTop_toBottomOf="@+id/NivelEstrato" />

    <Spinner
        android:id="@+id/spinnerUUEE"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/darker_gray"
        android:foregroundGravity="right"
        android:gravity="right|center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/spinnerNivelEstrato"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/UUEE"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNivelEstrato" />

    <TextView
        android:id="@+id/CurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="Fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_botton3"
        android:layout_width="65dp"
        android:layout_height="119dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/arrow_forward_ios_24px"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/UUEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="71dp"
        android:layout_height="123dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/arrow_forward_ios_24px"
        app:layout_constraintBottom_toBottomOf="@+id/next_botton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/next_botton3"
        app:layout_constraintTop_toTopOf="@+id/next_botton3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>