<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:text="@string/Yac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:text="@string/Excavador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Identificación"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Digital_Print"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="84dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/digital_print" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="151dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/checkBox7"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="92dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        app:layout_constraintVertical_bias="0.187" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox5"
        app:layout_constraintStart_toEndOf="@+id/checkBox5"
        app:layout_constraintTop_toTopOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toTopOf="@+id/checkBox3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="36dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/add_box_24px"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toTopOf="@+id/imageButton7"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="36dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bone"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:background="@drawable/sheep_logo"
        android:rotationY="180"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="@+id/checkBox6"
        app:layout_constraintStart_toStartOf="@+id/checkBox6" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/unnamed"
        app:layout_constraintBottom_toTopOf="@+id/checkBox7"
        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/checkBox7" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton12"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="264dp"
        android:background="@drawable/live_help_24px"
        app:layout_constraintEnd_toStartOf="@+id/imageButton11"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/imageButton13"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="@drawable/delete_outline_24px"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton12"
        app:layout_constraintStart_toStartOf="@+id/imageButton15"
        app:layout_constraintTop_toTopOf="@+id/imageButton12"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="99dp"
        android:layout_height="142dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arrow_forward_ios_24px"
        app:layout_constraintBottom_toTopOf="@+id/imageButton11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="64dp"
        android:text="@string/Notas"
        app:layout_constraintBottom_toTopOf="@+id/imageButton12"
        app:layout_constraintStart_toEndOf="@+id/imageButton15"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="106dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/pngwave"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/button7"
        android:layout_width="106dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/treea"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="99dp"
        android:layout_height="142dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/arrow_forward_ios_24px"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/imageButton13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:background="@drawable/rhino_logo_e2a19700f0_seeklogo_com"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/checkBox5"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5"
        app:layout_constraintVertical_bias="0.863" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="44dp"
        android:layout_height="49dp"
        android:background="@drawable/tooth"
        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/mineral"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox3" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/leaf"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="@+id/checkBox4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="32dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox7"
        app:layout_constraintStart_toEndOf="@+id/checkBox7"
        app:layout_constraintTop_toTopOf="@+id/checkBox7"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="274dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.245"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="285dp" />

</androidx.constraintlayout.widget.ConstraintLayout>